fix for return + title spacing

--- a/public/css/cw.css
+++ b/public/css/cw.css
@@ -29,6 +29,7 @@ Container
   .container {
     max-width: 32rem;
   }
+  }
 }
 @media (min-width: 56em) {
   .container {
@@ -73,5 +74,12 @@ Posts
 }
 .page-title,
 .post-title {
+  margin-top: 2rem;
+}
+
+@media (min-width: 38em) {
+  .page-title,
+  .post-title {
   margin-top: 0;
+  }
 }
